2011-11-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c:
  * Source/NSCFType.h:
  * Source/NSCFType.m:
  * Source/NSCFArray.m:
  * Source/NSCFData.m:
  * Source/NSCFError.m:
  * Source/NSCFString.m: Make sure runtime is initialized before trying
  briding classes.
  * Source/CFStringEncoding.c: Check both MIME and IANA standard encoding
  names.
  * Headers/CoreFoundation/CFString.h: Always define CFSTR() to be
  __CFStringMakeConstantString().

2011-11-25 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m:
	* Source/NSCFString.m:
	* Source/atomic_ops.h: Avoid warnings on FreeBSD.
	* Source/CFRuntime.c: Improve thread safety.
	* Source/CFStream.m: Fix bug.
	* Source/CFStringEncoding.c: Use "MIME" instead of "IANA" standard.

2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile: 
	* Source/NSCFArray.m: Objective-C class for CFArray.

2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumber.c: Remove unneeded #if statement.
	* Source/CFNumberFormatter.c: Simplify SetProperty and 
	CopyProperty functions.

2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/CFBase.h:
	* Source/GNUmakefile: Do not define MAC_OS_X_VERSION_MIN_ALLOWED.

2011-11-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c:
	* Source/CFBase.c:
	* Source/CFStringFormat.c:
	* Source/CFLocale.c:
	* Source/CFUUID.c:
	* Source/CFArray.c:
	* Source/CFRuntime.c:
	* Headers/CoreFoundation/CFPropertyList.h:
	* Headers/CoreFoundation/CFRuntime.h:
	* Headers/CoreFoundation/CFNumber.h:
	* Headers/CoreFoundation/CFError.h:
	* Headers/CoreFoundation/CFTimeZone.h:
	* Headers/CoreFoundation/CFStream.h:
	* Headers/CoreFoundation/CFStringEncodingExt.h:
	* Headers/CoreFoundation/CFLocale.h:
	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFCalendar.h:
	* Headers/CoreFoundation/CFBase.h:
	* Headers/CoreFoundation/CFNumberFormatter.h: Do not include